Assign multicast-group to application.
